docs/pss-inventory/retrieved-mdapi/unpackaged/objects/sfsp__SalesPlanUser__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Plan</label>
        <referenceTo>sfsp__SalesPlan__c</referenceTo>
        <relationshipLabel>Sales Plan Users</relationshipLabel>
        <relationshipName>SalesPlanUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Sales Plan Users</relationshipLabel>
        <relationshipName>SalesPlanUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Plan User</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AutoId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Plan Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>